@startuml

title Decorator

class Person{
    -name:String
    +putOn()
}
class Finery{
    #person: Person
    +putOn()
}
class BigTrouser{
    +putOn()
}
class LeatherShoes{
    +putOn()
}
class Sneakers{
    +putOn()
}
class Suit{
    +putOn()
}
class Tie{
    +putOn()
}
class TShirts{
    +putOn()
}


Person <|-- Finery
Finery o--> Person

Finery <|-- BigTrouser
Finery <|-- LeatherShoes
Finery <|-- Sneakers
Finery <|-- Suit
Finery <|-- Tie
Finery <|-- TShirts


@enduml